--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,11 +99,12 @@ jobs:
           echo "Listing installed SDK components"
           sdkmanager --list
 
-      # Step 12: Install Buildozer and Cython
-      - name: Install Buildozer and Cython
+      # Step 12: Install Buildozer, Cython, and distutils
+      - name: Install Buildozer, Cython, and distutils
         run: |
           python -m pip install cython
           python -m pip install buildozer
+          sudo apt-get install -y python3-distutils
 
       # Step 13: Build APK
       - name: Build APK
