--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,13 +57,7 @@ jobs:
           echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
           java -version
 
-      # Step 5: Ensure unzip is available
-      - name: Ensure unzip is available
-        run: |
-          which unzip || echo "unzip not found"
-          echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
-
-      # Step 6: Set up Android SDK manually
+      # Step 5: Set up Android SDK manually
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -73,16 +67,25 @@ jobs:
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 7: Install Android SDK components and NDK (includes aidl)
-      - name: Install Android SDK components and NDK
+      # Step 6: Install Android SDK components (including tools required for aidl)
+      - name: Install Android SDK components
         run: |
           sdkmanager --update
-          sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30" "ndk;21.3.6528147"
+          sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30" "cmdline-tools;latest" "ndk;23.1.7779620"
 
-      # Step 8: Accept SDK licenses
+      # Step 7: Accept SDK licenses
       - name: Accept SDK licenses
         run: |
           yes | sdkmanager --licenses
+
+      # Step 8: Verify aidl installation
+      - name: Verify aidl installation
+        run: |
+          if [ -f "$ANDROID_SDK_ROOT/ndk/23.1.7779620/toolchains/llvm/prebuilt/linux-x86_64/bin/aidl" ]; then
+            echo "aidl is installed successfully."
+          else
+            echo "aidl not found!" && exit 1
+          fi
 
       # Step 9: Set permissions for SDK folder
       - name: Set permissions for SDK folder
@@ -90,24 +93,18 @@ jobs:
           sudo chown -R $USER:$USER /usr/local/lib/android/sdk
           sudo chmod -R 755 /usr/local/lib/android/sdk
 
-      # Step 10: Verify Android SDK installation
-      - name: Verify Android SDK installation
-        run: |
-          echo "Listing installed SDK components"
-          sdkmanager --list
-
-      # Step 11: Install Buildozer and ensure setuptools is updated
+      # Step 10: Install Buildozer and ensure setuptools is updated
       - name: Install Buildozer and ensure setuptools is updated
         run: |
           python -m pip install --upgrade pip
           python -m pip install cython buildozer setuptools
 
-      # Step 12: Build APK
+      # Step 11: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 13: Upload APK as an artifact
+      # Step 12: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
