--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,18 +46,27 @@ jobs:
             python3-setuptools \
             python3-pip \
             curl \
-            git \
-            python3-distutils
+            git
 
-      # Step 4: Install JDK 17 and set JAVA_HOME
-      - name: Install JDK 17 and set JAVA_HOME
+      # Step 4: Install JDK 17 (to resolve sdkmanager errors)
+      - name: Install JDK 17
         run: |
           sudo apt-get install -y openjdk-17-jdk
-          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
-          echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
           java -version
 
-      # Step 5: Set up Android SDK manually
+      # Step 5: Set JAVA_HOME environment variable
+      - name: Set JAVA_HOME to JDK 17
+        run: |
+          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
+          echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
+
+      # Step 6: Install unzip and make sure it's on the path
+      - name: Ensure unzip is available
+        run: |
+          which unzip || echo "unzip not found"
+          echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
+
+      # Step 7: Set up Android SDK manually
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -67,44 +76,41 @@ jobs:
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 6: Install Android SDK components (including tools required for aidl)
-      - name: Install Android SDK components
+      # Step 8: Install Android SDK components directly using sdkmanager
+      - name: Install Android SDK components (including aidl)
         run: |
           sdkmanager --update
           sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30" "cmdline-tools;latest" "ndk;23.1.7779620"
 
-      # Step 7: Accept SDK licenses
+      # Step 9: Force Accept SDK licenses
       - name: Accept SDK licenses
         run: |
           yes | sdkmanager --licenses
 
-      # Step 8: Verify aidl installation
-      - name: Verify aidl installation
-        run: |
-          if [ -f "$ANDROID_SDK_ROOT/ndk/23.1.7779620/toolchains/llvm/prebuilt/linux-x86_64/bin/aidl" ]; then
-            echo "aidl is installed successfully."
-          else
-            echo "aidl not found!" && exit 1
-          fi
-
-      # Step 9: Set permissions for SDK folder
+      # Step 10: Set permissions for SDK folder
       - name: Set permissions for SDK folder
         run: |
           sudo chown -R $USER:$USER /usr/local/lib/android/sdk
           sudo chmod -R 755 /usr/local/lib/android/sdk
 
-      # Step 10: Install Buildozer and ensure setuptools is updated
-      - name: Install Buildozer and ensure setuptools is updated
+      # Step 11: Verify Android SDK installation
+      - name: Verify Android SDK installation
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install cython buildozer setuptools
+          echo "Listing installed SDK components"
+          sdkmanager --list
 
-      # Step 11: Build APK
+      # Step 12: Install Buildozer and Cython
+      - name: Install Buildozer and Cython
+        run: |
+          python -m pip install cython
+          python -m pip install buildozer
+
+      # Step 13: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 12: Upload APK as an artifact
+      # Step 14: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
