--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
             curl \
             git
 
-      # Step 4: Install JDK 17 (to resolve sdkmanager errors)
+      # Step 4: Install JDK 17
       - name: Install JDK 17
         run: |
           sudo apt-get install -y openjdk-17-jdk
@@ -60,13 +60,7 @@ jobs:
           echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
           echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
 
-      # Step 6: Install unzip and make sure it's on the path
-      - name: Ensure unzip is available
-        run: |
-          which unzip || echo "unzip not found"
-          echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
-
-      # Step 7: Set up Android SDK manually
+      # Step 6: Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -76,42 +70,43 @@ jobs:
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 8: Install Android SDK components directly using sdkmanager
+      # Step 7: Install Android SDK components
       - name: Install Android SDK components
         run: |
           sdkmanager --update
-          sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30"
+          sdkmanager \
+            "platform-tools" \
+            "build-tools;30.0.3" \
+            "build-tools;34.0.0" \
+            "platforms;android-30" \
+            "cmdline-tools;latest" \
+            "ndk-bundle" \
+            "tools"
 
-      # Step 9: Force Accept SDK licenses
+      # Step 8: Accept all SDK licenses
       - name: Accept SDK licenses
         run: |
           yes | sdkmanager --licenses
 
-      # Step 10: Set permissions for SDK folder
+      # Step 9: Set permissions for SDK folder
       - name: Set permissions for SDK folder
         run: |
           sudo chown -R $USER:$USER /usr/local/lib/android/sdk
           sudo chmod -R 755 /usr/local/lib/android/sdk
 
-      # Step 11: Verify Android SDK installation
-      - name: Verify Android SDK installation
-        run: |
-          echo "Listing installed SDK components"
-          sdkmanager --list
-
-      # Step 12: Install Buildozer, Cython, and distutils
+      # Step 10: Install Buildozer, Cython, and distutils
       - name: Install Buildozer, Cython, and distutils
         run: |
           python -m pip install cython
           python -m pip install buildozer
           python -m pip install setuptools
 
-      # Step 13: Build APK
+      # Step 11: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 14: Upload APK as an artifact
+      # Step 12: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
