--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,19 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      # Step 2: Set up Python 3.12
+      # Step 2: Install required utilities (including unzip)
+      - name: Install required utilities
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
+
+      # Step 3: Set up Python 3.12
       - name: Set up Python 3.12
         uses: actions/setup-python@v4
         with:
           python-version: 3.12
 
-      # Step 3: Install required dependencies
+      # Step 4: Install required dependencies
       - name: Install required dependencies
         run: |
           sudo apt-get update
@@ -30,7 +36,6 @@ jobs:
             libffi-dev \
             python3-dev \
             zip \
-            unzip \
             openjdk-8-jdk \
             libncurses5-dev \
             libstdc++6 \
@@ -48,19 +53,19 @@ jobs:
             curl \
             git
 
-      # Step 4: Install JDK 17
+      # Step 5: Install JDK 17
       - name: Install JDK 17
         run: |
           sudo apt-get install -y openjdk-17-jdk
           java -version
 
-      # Step 5: Set JAVA_HOME environment variable
+      # Step 6: Set JAVA_HOME environment variable
       - name: Set JAVA_HOME to JDK 17
         run: |
           echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
           echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
 
-      # Step 6: Set up Android SDK
+      # Step 7: Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -70,7 +75,7 @@ jobs:
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 7: Install Android SDK components
+      # Step 8: Install Android SDK components
       - name: Install Android SDK components
         run: |
           sdkmanager --update
@@ -83,30 +88,30 @@ jobs:
             "ndk-bundle" \
             "tools"
 
-      # Step 8: Accept all SDK licenses
+      # Step 9: Accept all SDK licenses
       - name: Accept SDK licenses
         run: |
           yes | sdkmanager --licenses
 
-      # Step 9: Set permissions for SDK folder
+      # Step 10: Set permissions for SDK folder
       - name: Set permissions for SDK folder
         run: |
           sudo chown -R $USER:$USER /usr/local/lib/android/sdk
           sudo chmod -R 755 /usr/local/lib/android/sdk
 
-      # Step 10: Install Buildozer, Cython, and distutils
+      # Step 11: Install Buildozer, Cython, and distutils
       - name: Install Buildozer, Cython, and distutils
         run: |
           python -m pip install cython
           python -m pip install buildozer
           python -m pip install setuptools
 
-      # Step 11: Build APK
+      # Step 12: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 12: Upload APK as an artifact
+      # Step 13: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
