--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,92 +26,51 @@ jobs:
         with:
           python-version: 3.12
 
-      # Step 4: Install required dependencies
-      - name: Install required dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            build-essential \
-            libssl-dev \
-            libffi-dev \
-            python3-dev \
-            zip \
-            openjdk-8-jdk \
-            libncurses5-dev \
-            libstdc++6 \
-            zlib1g-dev \
-            liblzma-dev \
-            pkg-config \
-            libsqlite3-dev \
-            libbz2-dev \
-            libreadline-dev \
-            libxml2-dev \
-            libxslt1-dev \
-            tk-dev \
-            python3-setuptools \
-            python3-pip \
-            curl \
-            git
-
-      # Step 5: Install JDK 17
+      # Step 4: Install JDK 17
       - name: Install JDK 17
         run: |
           sudo apt-get install -y openjdk-17-jdk
           java -version
 
-      # Step 6: Set JAVA_HOME environment variable
-      - name: Set JAVA_HOME to JDK 17
-        run: |
-          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
-          echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
-
-      # Step 7: Set up Android SDK
+      # Step 5: Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
           cmdline-tools-version: 12266719
           accept-android-sdk-licenses: true
           log-accepted-android-sdk-licenses: true
+          packages: tools platform-tools
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 8: Install Android SDK components
-      - name: Install Android SDK components
+      # Step 6: Install Buildozer and dependencies
+      - name: Install Buildozer and dependencies
         run: |
-          sdkmanager --update
-          sdkmanager \
-            "platform-tools" \
-            "build-tools;30.0.3" \
-            "build-tools;34.0.0" \
-            "platforms;android-30" \
-            "cmdline-tools;latest" \
-            "ndk-bundle" \
-            "tools"
+          sudo apt-get update
+          sudo apt-get install -y \
+            python3-pip \
+            python3-dev \
+            build-essential \
+            libssl-dev \
+            libffi-dev \
+            libncurses5-dev \
+            libsqlite3-dev \
+            libreadline-dev \
+            libbz2-dev \
+            liblzma-dev \
+            zlib1g-dev \
+            libxml2-dev \
+            libxslt1-dev \
+            tk-dev
+          python -m pip install --upgrade pip
+          python -m pip install cython buildozer
 
-      # Step 9: Accept all SDK licenses
-      - name: Accept SDK licenses
-        run: |
-          yes | sdkmanager --licenses
-
-      # Step 10: Set permissions for SDK folder
-      - name: Set permissions for SDK folder
-        run: |
-          sudo chown -R $USER:$USER /usr/local/lib/android/sdk
-          sudo chmod -R 755 /usr/local/lib/android/sdk
-
-      # Step 11: Install Buildozer, Cython, and distutils
-      - name: Install Buildozer, Cython, and distutils
-        run: |
-          python -m pip install cython
-          python -m pip install buildozer
-          python -m pip install setuptools
-
-      # Step 12: Build APK
+      # Step 7: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 13: Upload APK as an artifact
+      # Step 8: Upload APK artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
